--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </div>
 </header>
-<button class="layui-btn">导出报表</button>
+<a href="" class="layui-btn a">导出报表</a>
 <!--报表部分-->
 <div class="baobiao">
     <!--<table id="demo" lay-filter="test"></table>-->
@@ -460,6 +460,17 @@
 <script src="lay/modules/jquery.js"></script>
 <script src="layui.js"></script>
 <script>
+    // 导出表格
+    // 使用outerHTML属性获取整个table元素的HTML代码（包括<table>标签），然后包装成一个完整的HTML文档，设置charset为urf-8以防止中文乱码
+    var html = "<html><head><meta charset='utf-8' /></head><body>" + document.getElementsByTagName("table")[0].outerHTML + "</body></html>";
+    // 实例化一个Blob对象，其构造函数的第一个参数是包含文件内容的数组，第二个参数是包含文件类型属性的对象
+    var blob = new Blob([html], { type: "application/vnd.ms-excel" });
+    var a = document.getElementsByClassName("a")[0];
+    // 利用URL.createObjectURL()方法为a元素生成blob URL
+    a.href = URL.createObjectURL(blob);
+    // 设置文件名
+    a.download = "表格.xls";
+
     layui.use('element', function(){
         var element = layui.element;
 
@@ -481,29 +492,6 @@
             elem: '#test4' //指定元素
         });
     });
-    // 表格实例
-    layui.use('table', function(){
-        var table = layui.table;
 
-        //第一个实例
-    //     table.render({
-    //         elem: '#demo'
-    //         ,height: 315
-    //         ,url: '/demo/table/user/' //数据接口
-    //         ,page: true //开启分页
-    //         ,cols: [[ //表头
-    //             {field: 'id', title: 'ID', width:80, sort: true, fixed: 'left'}
-    //             ,{field: 'username', title: '用户名', width:80}
-    //             ,{field: 'sex', title: '性别', width:80, sort: true}
-    //             ,{field: 'city', title: '城市', width:80}
-    //             ,{field: 'sign', title: '签名', width: 177}
-    //             ,{field: 'experience', title: '积分', width: 80, sort: true}
-    //             ,{field: 'score', title: '评分', width: 80, sort: true}
-    //             ,{field: 'classify', title: '职业', width: 80}
-    //             ,{field: 'wealth', title: '财富', width: 135, sort: true}
-    //         ]]
-    //     });
-    //
-    });
 </script>
 </html>
